--- a/WebPort/src/components/TopNav/TopNav.css
+++ b/WebPort/src/components/TopNav/TopNav.css
@@ -28,3 +28,9 @@
 #logo {
     padding-left: 1vw;
 }
+
+.Logo {
+    width: 50px;
+    height: 50px;
+    margin: 2vh 0 0 3vh;
+}
